--- a/sequencer/Cargo.toml
+++ b/sequencer/Cargo.toml
@@ -40,6 +40,8 @@ reqwest = {version = "0.11.22", features = ["json"]}
 rand = { version = "0.8.5", features = ["std"]}
 rand_chacha = "0.3.1"
 anyhow = "1"
+serde_cbor ="0.11.2"
+axum-serde = {version ="0.7.0", features = ["cbor"]}
 
 
 [dev-dependencies]
